Closed Bug 1492472 Opened 6 years ago Closed 6 years ago

Crash in nsNNTPProtocol::LoadUrlInternal

Categories

(MailNews Core :: Networking: NNTP, defect)

Unspecified
All
defect
Not set
critical

Tracking

(thunderbird_esr6062+ fixed, thunderbird63 fixed, thunderbird64 fixed)

RESOLVED FIXED
Thunderbird 64.0
Tracking Status
thunderbird_esr60 62+ fixed
thunderbird63 --- fixed
thunderbird64 --- fixed

People

(Reporter: whimboo, Assigned: mkmelin)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is
report bp-df2e46dd-bf62-41f3-886e-4a1c50180919.
=============================================================

Top 10 frames of crashing thread:

0 XUL nsNNTPProtocol::LoadUrlInternal comm/mailnews/news/src/nsNNTPProtocol.cpp:1153
1 XUL non-virtual thunk to nsNNTPProtocol::OnProxyAvailable comm/mailnews/news/src/nsNNTPProtocol.cpp:1133
2 XUL mozilla::net::nsAsyncResolveRequest::DoCallback netwerk/base/nsProtocolProxyService.cpp:422
3 XUL <name omitted> netwerk/base/nsProtocolProxyService.cpp:272
4 XUL nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1040
5 XUL NS_ProcessPendingEvents xpcom/threads/nsThreadUtils.cpp:459
6 XUL nsBaseAppShell::NativeEventCallback widget/nsBaseAppShell.cpp:98
7 XUL nsAppShell::ProcessGeckoEvents widget/cocoa/nsAppShell.mm:436
8 CoreFoundation -[NSArray indexOfObject:inSortedRange:options:usingComparator:] 
9 CoreFoundation __44-[_CFPasteboardStore handleResolvePromises:]_block_invoke.150 

=============================================================

Thunderbird just crashed while running in the background.
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Attachment #9012831 - Flags: review?(jorgk)
Comment on attachment 9012831 [details] [diff] [review]
bug1492472_nntp_crash.patch

Looks correct, thanks.
Attachment #9012831 - Flags: review?(jorgk) → review+
Keywords: checkin-needed
OS: Mac OS X → All
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/ea04f95d5ceb
add error checking to avoid crash in nsNNTPProtocol::LoadUrlInternal. r=jorgk
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 64.0
Comment on attachment 9012831 [details] [diff] [review]
bug1492472_nntp_crash.patch

Fix avoids imminent crash and doesn't change system behaviour.
Attachment #9012831 - Flags: approval-comm-esr60+
Attachment #9012831 - Flags: approval-comm-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: