Bug 1492472 - add error checking to avoid crash in nsNNTPProtocol::LoadUrlInternal. r=jorgk